changed posts so they show up in date order (newest on top). fixed styling for post header when it overflows onto two lines.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -274,10 +274,11 @@
 {
   font-size: 60px;
   font-family: "HelveticaNeue";
-  padding-bottom: 20px;  
+  padding-bottom: 10px;  
   background-color: transparent;  
   text-decoration: none;
   color: #555;
+  line-height: 48px;
 }
 
 
